# OpenCV_example

./: CMakeLists.txt  README.md
src/: objectTracker.cpp
